--- a/Manuscripts/cogsci-2017/paper.tex
+++ b/Manuscripts/cogsci-2017/paper.tex
@@ -17,12 +17,7 @@
 }}
 
 
-
-
 \title{PACKER: An Exemplar Model of Category Generation}
- %JLA: I like an exemplar model of category generation better, the only issue is there already is an exemplar model. Need to figure out how to get PACKER or something like it as the acronym...
- % 		is that Jern & Kemp 2013 named their own exemplar model for category generation  ("copy-and-tweak"). We need to implement something like it...
-
 
 \author{
 { \large \bf Nolan Conaway (nconaway@wisc.edu) } \\
@@ -45,18 +40,19 @@ Categorization; etc
 
 \section{Introduction}
 
-One of the most intriguing capabilities of human cognition is the ability to creatively generate new ideas and concepts. % Some statement about how often people use concepts creatively, prevalence, etc
-The creative use of knowledge has, however, infrequently been the subject of scientific inquiry in the field of categorization. Most research on concepts and categorization has instead conformed to a traditional artificial classification learning paradigm \citep{kurtz2015human}, wherein the primary use of category knowledge is to discriminate between two or more experimenter-defined classes.
+One of the most intriguing capabilities of human cognition is the ability to creatively generate new ideas and concepts. The creative use of knowledge has, however, only infrequently been the subject of inquiry in the field of categorization. To date, most of what we understand about human concept generation comes from foundational studies in the field of creative cognition \citep[e.g.,][]{marsh1999inadvertent,smith1993constraining,ward2002role,ward1994structured,ward1995s}, though some work has recently been conducted using traditional classification learning approaches \citep{jern2013probabilistic}. 
 
-In one of the earliest explorations on the creative use of conceptual knowledge, Ward \& colleagues \citep{marsh1999inadvertent,smith1993constraining,ward2002role,ward1994structured,ward1995s} provided clear evidence of the role of prior knowledge in concept generation. In a canonical study, \citet{ward1994structured} asked participants to draw and describe novel species of plants and animals that might exist on other planets. Generation was strongly constrained by prior knowledge of Earth plants and animals: people generated alien species using the same structural forms found on Earth (e.g., eyes, legs, wings), exemplars tended to obey the same feature correlations observed on Earth (e.g., feathers tended to co-occur with wings), and exemplars drawn from the same species were less variable than animals drawn from different species (as is the case on Earth). 
+Existing work on the creative use of conceptual knowledge predominantly explores the role of prior knowledge in generating novel concepts. The core experimental phenomenon is that people generate categories possessing the same distributional properties as known categories. For example, in a canonical study \citet{ward1994structured} asked participants to draw and describe novel species of plants and animals that might exist on other planets. Generation was strongly constrained by prior knowledge of Earth plants and animals: people generated alien species using the same structural forms found on Earth (e.g., eyes, legs, wings) and possessing the same feature correlations observed on Earth (e.g., feathers co-occur with wings). Likewise, exemplars drawn from the same species were less variable than animals drawn from different species, and possessed features that were adaptive for their environment (as is the case on Earth).
 
-An early account of these these results proposed that people complete the generation task by retrieving memories of known Earth plants and animals, and slightly changing them to create something new \citep{ward2002role,ward1995s}.  This account, which we will refer to as the \textit{copy-and-tweak} account can be casted within a formal exemplar approach \citep[see][]{jern2013probabilistic}. However, due to the nature of the response formats used (e.g., drawing and describing examples), and due the prior knowledge assumed (e.g., knowledge of plants and animals on Earth), these experiments are not suitable for formal modeling.
+Similar results were obtained more recently in a study conducted within a traditional categorization paradigm. \citet{jern2013probabilistic} trained participants on a set of experimenter-defined categories composed of exemplars within an artificial three-dimensional domain (e.g., 2D shapes varying in size, hue, and saturation). After a short training phase, participants were asked to generate exemplars from a new category. Participants were provided with a set of scales to adjust the feature values of each generated stimulus, and were given unlimited time to create each example. As in the classic \cite{ward1994structured} experiment, \citet{jern2013probabilistic} found that people generated artificial categories possessing the same feature variance and correlations as the experimenter-defined categories in the domain.
 
-In more recent work, \citet{jern2013probabilistic} reported several experiments on exemplar and category generation within an artificial category learning paradigm (and are thus suitable for formal modeling). In their paradigm, participants are first exposed to members from a set of known categories within a reduced feature space (e.g., size, hue, saturation). After observing the assigned examples, participants are asked to generate exemplars from a new category within the domain. Participants provided with a set of scales scales that can be used to adjust the feature values of the generated stimulus (one scale per feature), and are given unlimited time to create each example. As in the classic \cite{ward1994structured} experiment, \citet{jern2013probabilistic} found that people generated categories possessing the same feature correlations as the known categories in the domain.
+Results such as these have motivated formal accounts of generation that explicitly invoke the idea that people re-purpose existing knowledge to generate something new -- either by copying-and-tweaking an observation retrieved from memory \citep{ward2002role,ward1995s}, or by abstracting the distributional structure of categories in the domain \citep{jern2013probabilistic}.
 
-\citet{jern2013probabilistic} developed a hierarchical model of generation in order to explain their results. In their model, categories are represented as probability distributions in a multidimensional space (with each stimulus feature corresponding to a dimension of the space). Observed exemplars (represented as points in this space) are viewed as samples from an underlying category distribution (e.g., a multivariate normal distribution). These category distributions are in turn viewed as samples from an underlying domain distribution, which represents the common distributional characteristics among known categories (e.g., feature variance, feature correlations). When asked to generate a novel class, people are thought to sample a category distribution from the domain distribution, and then sample exemplars from the category distribution. Thus, exemplars generated into novel classes tend to obey the same distributional properties of known categories. 
 
-The work presented by Ward \& Colleagues, as well as that of \citet{jern2013probabilistic}, undoubtedly captures a core principle of the creative use of conceptual knowledge: category generation is informed by prior knowledge of concepts in the target domain. The two models described above (copy-and-tweak, hierarchical sampling) are conceptually similar in that they assume learners \textit{copy} something about existing categories: individuals either directly copy-and-tweak stored observations, or copy the distributional structure of entire categories.
+ % An early account, which \citet{jern2013probabilistic} termed the \textit{copy-and-tweak} account, proposed that people complete the generation task by retrieving observations from memory, and slightly changing them to create something new \citep{ward2002role,ward1995s}. This account can be casted within a formal exemplar approach -- first, participants retrieve an exemplar from memory, and then slightly change its features until it is sufficiently novel. 
+
+% \citet{jern2013probabilistic} developed a hierarchical model of generation in order to explain their results. In their model, categories are represented as probability distributions in a multidimensional space (with each stimulus feature corresponding to a dimension of the space). Observed exemplars (represented as points in this space) are viewed as samples from an underlying category distribution (e.g., a multivariate normal distribution). These category distributions are in turn viewed as samples from an underlying domain distribution, which represents the common distributional characteristics among known categories (e.g., feature variance, feature correlations). When asked to generate a novel class, people are thought to sample a category distribution from the domain distribution, and then sample exemplars from the category distribution. Thus, exemplars generated into novel classes tend to obey the same distributional properties of known categories. 
+
 
 \begin{figure*}
     \begin{center}
@@ -66,9 +62,10 @@ The work presented by Ward \& Colleagues, as well as that of \citet{jern2013prob
     \end{center}
 \end{figure*}
 
-In this paper, we introduce a novel exemplar-based approach to category generation, the PACKER model (\textit{Producing Alike and Contrasting Knowledge using Exemplar Representations}), which creates new categories by balancing two constraints: (1) new categories should be different from known categories (minimizing between-class similarity), and (2) new categories should be internally coherent (maximizing within-class similarity). PACKER is a significant departure from the accounts of generation reviewed above in that it instantiates assumptions about how exemplars in novel classes should \textit{differ} from existing categories (rather than how they should align to them). Likewise, the PACKER model is of interest because it follows directly from the well-studied exemplar-similarity framework that has led the field for over three decades.
+In this paper, we introduce a novel exemplar-based approach to category generation, the PACKER model (\textit{Producing Alike and Contrasting Knowledge using Exemplar Representations}), which creates new categories by balancing two constraints: (1) new categories should be different from known categories (minimizing between-class similarity), and (2) new categories should be internally coherent (maximizing within-class similarity). As such, PACKER is a significant departure from previous accounts of generation -- rather than proposing that people create new categories by re-purposing existing knowledge, PACKER explains generation exclusively in terms of the well-studied mechanics of exemplar representations and therefore possesses a rich connection to the wider body of research on category learning.
 
-In the sections below, we formally describe the PACKER model. We then report a behavioral experiment testing the model's predictions, and report formal simulations comparing PACKER to the copy-and-tweak and hierarchical sampling models.
+In the sections below, we formally describe the PACKER model. We then explore the model's predictions using a behavioral experiment and simulations. Rather than formally evaluate PACKER on the benchmarks reviewed above, we instead focus on testing predictions made by PACKER that distinguish the model from previous approaches.
+
 
 \section{PACKER: An Exemplar Model}
 
@@ -79,37 +76,86 @@ As in the GCM, the similarity between two examples, $s(x_i, x_j)$, is defined as
   s(x_i,x_j) = exp( -c \sum_{k}{|x_{ik} - x_{jk}|}w_k )
   \label{eq:similarity}
 \end{equation}
-where $w_k$ is a vector of attention parameters ($\sum_k{w_k} = 1$), weighting to the importance of each feature in the similarity computation. The $c$ parameter controls the specificity of examples: larger values of $c$ produce more \textit{specific} representations (exemplars that do not generalize broadly). The attention weights are of interest in explaining individual differences in generation strategy (discussed below), but for our formal simulations they are set uniformly.
+where $w_k$ is a vector of attention parameters ($\sum_k{w_k} = 1$), weighting to the importance of each feature in the similarity computation, and $c$ ($<0$) is a specificity parameter controlling the spread of exemplar generalization. The attention weights are of interest in explaining individual differences in generation strategy (discussed below), but for our formal simulations they are set uniformly.
 
 % Note something about minkowski metric? Or can we assume people know that.
 
-When prompted to generate a new example, the model considers both the summed similarity to examples from other categories as well as the summed similarity to examples in the target category. More formally, the summed similarity $ss$ between generation candidate $y$ and the model's stored exemplars $x$ can be computed as:
+When prompted to generate a new example, the model considers both the similarity to examples from other categories as well as the similarity to examples in the target category. More formally, the aggregated similarity $a$ between generation candidate $y$ and the model's stored exemplars $x$ can be computed as:
 \begin{equation}
-  ss(y, x) = \sum_j{\hat{f_j} s(y, x_j)}
+  a(y, x) = \sum_j{\hat{f_j} s(y, x_j)}
   \label{eq:packer-ss}
 \end{equation}
 where $\hat{f_j}$ is a function specifying each example's degree of contribution toward generation. Although $\hat{f_j}$ may be set arbitrarily, in PACKER it is set according to class assignment. For known members of contrast categories, $\hat{f_j} = \phi$. For known members of the target category, $\hat{f_j} = \gamma$. $\phi$ and $\gamma$ are free parameters ($-\infty \leq \phi, \gamma \leq \infty$) controlling the contribution of target- and contrast-category similarity to generation. Larger absolute values for either parameter produce greater consideration of that type of similarity, with values of 0 producing no effect. Negative values produce a `repelling' effect (exemplars are less likely to be generated nearby). Conversely, positive values produce a `pulling' effect (exemplars are more likely to be generated nearby). 
 
-Because the model's main proposals are that new categories should be different from existing categories, and exemplars belonging to the same category should be similar to one another, PACKER is commonly simulated under the constraints that $\phi < 0$, $\gamma > 0$, thus, similarity to contrast categories is effectively subtracted from similarity to the target category. When $-\phi = \gamma$, negative summed similarities indicate that $y$ is more similar to members of contrast categories, and positive values indicate $y$ is more similar to members of the target category.
+Because the model's main proposals are that new categories should be different from existing categories, and exemplars belonging to the same category should be similar to one another, PACKER is commonly simulated under the constraints that $\phi < 0$, $\gamma > 0$, thus, similarity to contrast categories is effectively subtracted from similarity to the target category. When $-\phi = \gamma$, negative aggregate similarities indicate that $y$ is more similar to members of contrast categories, and positive values indicate $y$ is more similar to the target category.
 
-The probability that a given candidate $y$ will be generated is evaluated using the \citet{luce1977choice} choice axiom. Candidates with larger summed similarity are more likely to be generated compared to candidates with smaller summed similarity:
+The probability that a given candidate $y$ will be generated is evaluated using the \citet{luce1977choice} choice axiom. Candidates with larger aggregate similarity are more likely to be generated compared to candidates with smaller aggregate similarity:
 \begin{equation}
 p(y) = \dfrac
-    { exp( { \theta \cdot ss(y, x) } ) }
-    { \sum_i{ exp( { \theta \cdot ss(y_i, x) } ) } }
+    { exp( { \theta \cdot a(y, x) } ) }
+    { \sum_i{ exp( { \theta \cdot a(y_i, x) } ) } }
     \label{eq:packer-choice}
 \end{equation}
 where $\theta$ ($\geq 0$) is a free parameter controlling overall response determinism. 
 
 \subsection{Summary}
 
-The PACKER model described above explains exemplar and category generation under a traditional exemplar-similarity approach. The model proposes that people generate categories by maximizing within-category similarity and minimizing between-category similarity. 
+The PACKER model described above explains exemplar and category generation under a traditional exemplar-similarity approach, proposing that people generate categories by maximizing within-category similarity and minimizing between-category similarity. By consequence, PACKER is unique as a model of generation in several respects. Not only does the model lack mechanisms for copying knowledge of existing categories, but it also specifies precisely how generated classes should \textit{differ} from existing ones. Thus, unlike previous accounts distributional properties of known categories affect generation only insofar as they constrain inter-exemplar similarities. Instead, the \textit{location} of known categories in the domain is crucial because it constrains remaining possible locations for new categories.
 
-PACKER is unique as a model of generation because it specifies precisely how generated classes should \textit{differ} from existing ones -- the copy-and-tweak and hierarchical sampling accounts explain why generated classes share many properties with known classes, but not how they should be distinct. Likewise, PACKER is unique in that the distributional properties of known categories affect generation only insofar as they constrain inter-exemplar similarities. Instead, the \textit{location} of known categories in the domain is crucial because it constrains remaining possible locations for new categories. In the sections below, we report a behavioral experiment testing these predictions. We then report formal simulations with PACKER, a copy-and-tweak model, and the \citet{jern2013probabilistic} hierarchical sampling model. 
+
+
+
+
+
+
+\section{Alternative Models}
+
+\subsection{Copy-and-Tweak}
+The copy-and-tweak model proposes that generation is a two-part process: first, learners retrieve a source exemplar from memory, and then they change it in some way so that the generated item is sufficiently dissimilar. In our model, the probability that a given exemplar $z$ is retrieved from memory is given by: 
+
+\begin{equation}
+p(z) = exp(\hat{f}_z) / \sum_z{ exp(\hat{f}_z) }
+\end{equation}
+
+$\hat{f}_z$ is a function specifying each item's relative chance of being selected. As in Equation \ref{eq:packer-ss}, $\hat{f}_j$ may be set arbitrarily. However, in our simulations, $\hat{f}_z = -\gamma$ for members of contrast categories, and $\hat{f}_z = \gamma$ for members of the target category. The resulting free parameter $\gamma$ ($>0$) thus controls the probability that a member of the target category will be retrieved from memory.
+
+After a source example is retrieved, the similarity between generation candidates $y$ and the source is computed as per Equation \ref{eq:similarity}. The model's goal is to generate an item that is similar to $z$, but exceeds a dissimilarity threshold (such that the new item is similar-but-not-too-similar). Formally, the probability that $y$ will be generated based on a source $z$, is given by:
+
+\begin{equation}
+    p(y|z)  = \dfrac
+    { exp(\theta \cdot s(y,z)) g(y,z,\tau)}
+    {\sum_i{exp(\theta \cdot s(y_i,z)) g(y_i,z,\tau)}} 
+\end{equation}
+where $\theta$ is a response determinism parameter. $g$ is a function specifying whether $y$ is sufficiently dissimilar to $z$. The dissimilarity threshold is specified by a free parameter, $\tau$ ($0<\tau\leq1$). $g = 1$ when $s(y,z) < \tau$ and $g = 0$ otherwise.
+
+To obtain predictions not depending on a given source example, the model's predictions can be aggregated over all possible sources:
+
+\begin{equation}
+  p(y) = \sum_z{p(z)p(y|z) }
+\end{equation}
+
+Thus, the probability that an example $y$ will be selected is a function of its similarity to each of the possible sources, as well as the probability each source will be retrieved.
+
+
+\subsection{Hierarchical Sampling}
+
+In the \cite{jern2013probabilistic} model, examples are viewed as samples of an underlying category distribution, which is in turn viewed as a sample of an underlying domain distribution. As in the implementation reported by \cite{jern2013probabilistic}, we assume that exemplars are distributed according to a multivariate normal distribution with parameters ($\mu, \Sigma$). To obtain a conjugate model, we assume that the domain of categories is inverse-Wishart distributed. Space does not allow for a full derivation of this model, and so we will simply report how generated category parameters ($\mu_B, \Sigma_B$) are inferred.
+
+
+
+% do we need to describe the implementation?
+
+
+
+
+
+
+
 
 
 \section{Behavioral Experiment}
 
+The PACKER model predicts
 The behavioral experiment described below was designed to test whether the \textit{location} of contrast categories (as opposed to their structure), influences generation. The experiment follows the paradigm developed by \citet{jern2013probabilistic}: first, participants are exposed to members of a known category (`Alpha', or `A'), and are then asked to generate exemplars belonging to a new category (`Beta', or `B'). 
 
 We developed two Alpha categories (see Figure \ref{fig:middle-bottom-conditions}), instantiating the two conditions of the experiment. In both conditions, members of the Alpha category are tightly clustered, with equal variance on both features and no correlation between features. Our manipulation is fairly `weak': the conditions have only a slight difference in the Y-Axis position of the Alpha category. In the `Middle' condition the Alpha category is placed in the center of the space, in the `Bottom' condition the Alpha category is placed in the bottom-center of the space. 
@@ -131,15 +177,7 @@ More generally, the PACKER model proposes that the probability a stimulus $y$ wi
 
 \subsection{Participants \& Materials}
 
-We recruited 122 participants from Amazon Mechanical Turk. All participants were located in the United States. 61 Participants were assigned to the `Middle' condition, 61 were assigned to the `Bottom' condition. Stimuli were squares varying in color (RGB 25--230) and size (3.0--5.8cm), see Figure \ref{fig:stimuli-samples} for samples. The assignment of perceptual features (color, size) to axes of the domain space (x, y) was counterbalanced across participants.
-
-\begin{figure}
-    \begin{center}
-    \input{figs/stimuli-samples.pgf}
-    \caption{Sample stimuli (not drawn to scale).}
-    \label{fig:stimuli-samples}
-    \end{center}
-\end{figure}
+We recruited 122 participants from Amazon Mechanical Turk. All participants were located in the United States. 61 Participants were assigned to the `Middle' condition, 61 were assigned to the `Bottom' condition. Stimuli were squares varying in color (RGB 25--230) and size (3.0--5.8cm). The assignment of perceptual features (color, size) to axes of the domain space (x, y) was counterbalanced across participants.
 
 \subsection{Procedure}
 
@@ -207,33 +245,6 @@ Our behavioral experiment revealed strong effects of the role of category locati
 
 We conducted formal simulations to our data using the PACKER model described above, as well as an exemplar-based \textit{copy-and-tweak} model, and conjugate implementation of the hierarchical sampling model proposed by \citet{jern2013probabilistic}. Below, we briefly describe the formal basis of the copy-and-tweak and hierarchical sampling models.
 
-\subsection{Copy-and-Tweak}
-The copy-and-tweak model proposes that generation is a two-part process: first, learners retrieve a source exemplar from memory, and then they change it in some way so that the generated item is sufficiently dissimilar. In our model, the probability that a given exemplar $z$ is retrieved from memory is given by: $p(z) = exp(\hat{f}_z) / \sum_z{ exp(\hat{f}_z) }$. $\hat{f}_z$ is a function specifying each item's relative chance of being selected. As in Equation \ref{eq:packer-ss}, $\hat{f}_j$ may be set arbitrarily. However, in our simulations, $\hat{f}_z = -\gamma$ for members of contrast categories, and $\hat{f}_z = \gamma$ for members of the target category. The resulting free parameter $\gamma$ ($>0$) thus controls the probability that a member of the target category will be retrieved from memory.
-
-After a source example is retrieved, the similarity between generation candidates $y$ and the source is computed as per Equation \ref{eq:similarity}. The model's goal is to generate an item that is similar to $z$, but exceeds a dissimilarity threshold (such that the new item is similar-but-not-too-similar). Formally, the probability that $y$ will be generated based on a source $z$, is given by:
-
-\begin{equation}
-  \begin{cases} 
-    p(y|z) \propto exp(\theta \cdot s(y,z)), & \text{if } s(y,z) \leq \tau \\
-    p(y|z) = 0, & \text{otherwise} 
-  \end{cases} 
-\end{equation}
-where $\theta$ is a response determinism parameter, and $\tau$ is a similarity threshold ($0 < \tau \leq 1$) specifying the amount of similarity tolerated between $y$ and $z$. Values of $p(y|z)$ are then normalized such that $\sum_i{p(y_i|z)} = 1$. To obtain predictions not depending on a given source example, the model's predictions can be aggregated over all possible sources:
-
-\begin{equation}
-  p(y) = \sum_z{p(z)p(y|z) }
-\end{equation}
-
-Thus, the probability that an example $y$ will be selected is a function of its similarity to each of the possible sources, as well as the probability each source will be retrieved.
-
-
-\subsection{Hierarchical Sampling}
-
-In the \cite{jern2013probabilistic} model, examples are viewed as samples of an underlying category distribution, which is in turn viewed as a sample of an underlying domain distribution. As in the implementation reported by \cite{jern2013probabilistic}, we assume that exemplars are distributed according to a multivariate normal distribution with parameters ($\mu, \Sigma$). To obtain a conjugate model, we assume that the domain of categories is inverse-Wishart distributed. Space does not allow for a full derivation of this model, and so we will simply report how generated category parameters ($\mu_B, \Sigma_B$) are inferred.
-
-
-
-% do we need to describe the implementation?
 
 \subsection{Model-Fitting}
 In order to obtain an overall sense of each model's ability to explain our results, we fitted each model trial-wise, maximizing the log-likelihood of the its predictions against our results. For each trial, models were initialized with the participant's Alpha category (Middle or Bottom), and the configuration of the participant's Beta category during that trial. Four parameters were fitted for the PACKER model: $c$, $\phi$, $\gamma$, and $\theta$. Likewise, four parameters were fitted to the \cite{jern2013probabilistic} model: $\kappa$, $\gamma$, $\nu$, and $\theta$. Parameters were not allowed to vary between participants or conditions -- the goal was to obtain the best-fit to our entire dataset.
